--- a/src/main/webapp/WEB-INF/views/trainplan/audit.html
+++ b/src/main/webapp/WEB-INF/views/trainplan/audit.html
@@ -51,7 +51,7 @@
                             <form class="form-inline" role="form">
                                 <div class="input-group">
                                     <button href="#" class="btn btn-default margin-right-10" role="button">校验</button>
-                                    <button id="compare" href="#" class="btn btn-default margin-right-10" role="button">图形对比</button>
+                                    <a id="compare" href="#" class="btn btn-default margin-right-10" role="button">图形对比</a>
                                     <button href="#" class="btn btn-default margin-right-10" role="button">生成运行线</button>
                                     <button href="#" class="btn btn-default margin-right-10" role="button">客调审核</button>
                                     <button href="#" class="btn btn-default margin-right-10 disabled" role="button">值班主任审核</button>
