--- a/src/main/webapp/WEB-INF/views/trainplan/timetable.html
+++ b/src/main/webapp/WEB-INF/views/trainplan/timetable.html
@@ -7,23 +7,29 @@
     <meta http-equiv="Cache-Control" content="no-store"/>
     <meta http-equiv="Pragma" content="no-cache"/>
     <meta http-equiv="Expires" content="0"/>
-    <title>审核次日客车运行线</title>
-    <link type="text/css" href="../../../assets/css/custom-bootstrap.css" rel="stylesheet"/>
-    <link type="text/css" href="../../../assets/css/font-awesome.min.css" rel="stylesheet"/>
-    <link type="text/css" href="../../../assets/css/style.css" rel="stylesheet"/>
-    <script type="text/javascript" src="../../../assets/js/jquery.js"></script>
-    <script type="text/javascript" src="../../../assets/js/html5.js"></script>
-    <script type="text/javascript" src="../../../assets/js/fuelUX.js"></script>
-    <script type="text/javascript" src="../../../assets/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="../../../assets/js/jquery.dataTables.js"></script>
-    <script type="text/javascript" src="../../../assets/js/jquery-ui-1.9.2.custom.min.js"></script>
-    <script type="text/javascript" src="../../../assets/js/datepicker.js"></script>
-    <script type="text/javascript" src="../../../assets/js/jquery.knob.js"></script>
-    <script type="text/javascript" src="../../../assets/js/jquery.gritter.min.js"></script>
-    <script type="text/javascript" src="../../../assets/js/jquery.sparkline.min.js"></script>
-    <script type="text/javascript" src="../../../assets/js/purl.js"></script>
-    <script type="text/javascript" src="../../../assets/js/knockout.js"></script>
-    <script type="text/javascript" src="../../../assets/js/trainplan/audit.js"></script>
+    <title>时刻表</title>
+    <link type="text/css" href="assets/css/custom-bootstrap.css" rel="stylesheet"/>
+    <link type="text/css" href="assets/css/font-awesome.min.css" rel="stylesheet"/>
+    <link type="text/css" href="assets/css/style.css" rel="stylesheet"/>
+    <script type="text/javascript" src="assets/js/jquery.js"></script>
+    <script type="text/javascript" src="assets/js/html5.js"></script>
+    <script type="text/javascript" src="assets/js/fuelUX.js"></script>
+    <script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="assets/js/jquery.dataTables.js"></script>
+    <script type="text/javascript" src="assets/js/jquery-ui-1.9.2.custom.min.js"></script>
+    <script type="text/javascript" src="assets/js/datepicker.js"></script>
+    <script type="text/javascript" src="assets/js/jquery.knob.js"></script>
+    <script type="text/javascript" src="assets/js/jquery.gritter.min.js"></script>
+    <script type="text/javascript" src="assets/js/jquery.sparkline.min.js"></script>
+    <script type="text/javascript" src="assets/js/purl.js"></script>
+    <script type="text/javascript" src="assets/js/knockout.js"></script>
+    <script type="text/javascript" src="assets/js/trainplan/timetable.js"></script>
+    <style>
+        #hdtimetable table tr th{
+            border-color:#dfe4ee;
+            text-align:center;
+        }
+    </style>
 </head>
 <body>
 <div class="container padding0 margin0" style="width: 100%;">
@@ -31,7 +37,7 @@
     <div class="col-md-12 col-xs-12 col-lg-12 padding0 margin0">
         <div class="panel-body padding0 margin0">
             <div class="table-responsive padding0 margin0">
-                <table class="table table-bordered table-striped table-hover">
+                <table id="timetable" class="table table-bordered table-striped table-hover">
                     <thead>
                     <tr>
                         <th class="text-center">序号</th>
@@ -42,94 +48,14 @@
                         <th class="text-center">营业</th>
                     </tr>
                     </thead>
-                    <tbody>
+                    <tbody data-bind="foreach: timetable">
                     <tr>
-                        <td class="text-center">1</td>
-                        <td class="text-center">成都</td>
-                        <td class="text-center">12:00</td>
-                        <td class="text-center">12:04</td>
-                        <td class="text-center">1</td>
-                        <td class="text-center">1</td>
-                    </tr>
-                    <tr>
-                        <td class="text-center">1</td>
-                        <td class="text-center">成都</td>
-                        <td class="text-center">12:00</td>
-                        <td class="text-center">12:04</td>
-                        <td class="text-center">1</td>
-                        <td class="text-center">1</td>
-                    </tr>
-                    <tr>
-                        <td class="text-center">1</td>
-                        <td class="text-center">成都</td>
-                        <td class="text-center">12:00</td>
-                        <td class="text-center">12:04</td>
-                        <td class="text-center">1</td>
-                        <td class="text-center">1</td>
-                    </tr>
-                    <tr>
-                        <td class="text-center">1</td>
-                        <td class="text-center">成都</td>
-                        <td class="text-center">12:00</td>
-                        <td class="text-center">12:04</td>
-                        <td class="text-center">1</td>
-                        <td class="text-center">1</td>
-                    </tr>
-                    <tr>
-                        <td class="text-center">1</td>
-                        <td class="text-center">成都</td>
-                        <td class="text-center">12:00</td>
-                        <td class="text-center">12:04</td>
-                        <td class="text-center">1</td>
-                        <td class="text-center">1</td>
-                    </tr>
-                    <tr>
-                        <td class="text-center">1</td>
-                        <td class="text-center">成都</td>
-                        <td class="text-center">12:00</td>
-                        <td class="text-center">12:04</td>
-                        <td class="text-center">1</td>
-                        <td class="text-center">1</td>
-                    </tr>
-                    <tr>
-                        <td class="text-center">1</td>
-                        <td class="text-center">成都</td>
-                        <td class="text-center">12:00</td>
-                        <td class="text-center">12:04</td>
-                        <td class="text-center">1</td>
-                        <td class="text-center">1</td>
-                    </tr>
-                    <tr>
-                        <td class="text-center">1</td>
-                        <td class="text-center">成都</td>
-                        <td class="text-center">12:00</td>
-                        <td class="text-center">12:04</td>
-                        <td class="text-center">1</td>
-                        <td class="text-center">1</td>
-                    </tr>
-                    <tr>
-                        <td class="text-center">1</td>
-                        <td class="text-center">成都</td>
-                        <td class="text-center">12:00</td>
-                        <td class="text-center">12:04</td>
-                        <td class="text-center">1</td>
-                        <td class="text-center">1</td>
-                    </tr>
-                    <tr>
-                        <td class="text-center">1</td>
-                        <td class="text-center">成都</td>
-                        <td class="text-center">12:00</td>
-                        <td class="text-center">12:04</td>
-                        <td class="text-center">1</td>
-                        <td class="text-center">1</td>
-                    </tr>
-                    <tr>
-                        <td class="text-center">1</td>
-                        <td class="text-center">成都</td>
-                        <td class="text-center">12:00</td>
-                        <td class="text-center">12:04</td>
-                        <td class="text-center">1</td>
-                        <td class="text-center">1</td>
+                        <td class="text-center" data-bind="text: $index"></td>
+                        <td class="text-center" data-bind="text: name"></td>
+                        <td class="text-center" data-bind="text: arrDateTime"></td>
+                        <td class="text-center" data-bind="text: dptDateTime"></td>
+                        <td class="text-center" data-bind="text: trackName"></td>
+                        <td class="text-center" data-bind="text: psg"></td>
                     </tr>
                     </tbody>
                 </table>
