change css & fix graphic data bug

--- a/src/main/webapp/assets/css/login.css
+++ b/src/main/webapp/assets/css/login.css
@@ -1,6 +1,25 @@
+.btn-big {
+	display:block;
+	font-size:17px;
+	font-family: "微软雅黑";
+}
+.btn-primary {
+	color: white;
+	background-color: #1297FF;
+	border-color: #007AD8;
+}
+.btn-display {
+	display:none;
+}
+i {
+	margin-right:10px;
+}
+body {
+	font-family: "微软雅黑";
+}
 @charset "utf-8";
 /* CSS Document */
-html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
+html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
 	margin: 0px;
 	padding: 0px;
 	border: 0px;
@@ -39,17 +58,18 @@ ol, ul {
 	background-size: 100% 100%;
 	background-attachment: fixed;
 }
-.login_overlay{
+.login_overlay {
 	position:absolute;
-   top:50%;
-   margin-top:-180px;
-   left:50%;
-   margin-left:-310px;
-	}
-.login-logo{
+	top:50%;
+	margin-top:-180px;
+	left:50%;
+	margin-left:-310px;
+}
+.login-logo {
 	width:553px;
 	height:63px;
-	background:url(../img/login-logo.png);}
+	background:url(../img/login-logo.png);
+}
 .login_input {
 	margin-top:90px;
 	z-index:20;
@@ -66,14 +86,12 @@ ol, ul {
 	text-align:center;
 	width:100%;
 }
-.aquila{
-	 position:absolute;
-	 right:5%;
-	 top:6%;
-	 background:url(../img/aquila.png);
-	 height:271px; 
-     width:234px; 
-     background-repeat:no-repeat;
-	 }
-		 
-		 
+.aquila {
+	position:absolute;
+	right:5%;
+	top:6%;
+	background:url(../img/aquila.png);
+	height:271px;
+	width:234px;
+	background-repeat:no-repeat;
+}
