--- a/src/main/webapp/WEB-INF/views/trainplan/login.html
+++ b/src/main/webapp/WEB-INF/views/trainplan/login.html
@@ -1,20 +1,16 @@
-<%@ page contentType="text/html;charset=UTF-8"%>
-<%@ taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core" %>
-<c:set var="ctx" value="${pageContext.request.contextPath}"/>
-
-<!DOCTYPE html>
-<html>
-<head lang="en">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <link rel="stylesheet" type="text/css" href="${ctx}/assets/css/custom-bootstrap.css"/>
-    <link type="text/css" rel="stylesheet" href="${ctx}/assets/css/font-awesome.min.css"/>
-    <link rel="stylesheet" type="text/css" href="${ctx}/assets/css/style.css"/>
-    <link rel="stylesheet" type="text/css" href="${ctx}/assets/css/login.css"/>
-    <script src="${ctx}/assets/js/jquery.js"></script>
-    <script src="${ctx}/assets/js/html5.js"></script>
-    <script src="${ctx}/assets/js/bootstrap.min.js"></script>
-    <script src="${ctx}/assets/js/respond.min.js"></script>
-    <script type="application/javascript" src="${ctx}/assets/js/trainplan/login.js"></script>
+    <link rel="stylesheet" type="text/css" href="../../../assets/css/custom-bootstrap.css"/>
+    <link type="text/css" rel="stylesheet" href="../../../assets/css/font-awesome.min.css"/>
+    <link rel="stylesheet" type="text/css" href="../../../assets/css/style.css"/>
+    <link rel="stylesheet" type="text/css" href="../../../assets/css/login.css"/>
+    <script src="../../../assets/js/jquery.js"></script>
+    <script src="../../../assets/js/html5.js"></script>
+    <script src="../../../assets/js/bootstrap.min.js"></script>
+    <script src="../../../assets/js/respond.min.js"></script>
     <title>login</title>
 </head>
 <body>
@@ -42,21 +38,21 @@
                     <div class="col-sm-10">
                         <div class="input-group">
                             <input type="password" class="form-control" id="inputPassword" placeholder="密码" style="border-radius: 4px; width: 240px">
-                        </div>
                     </div>
-                    <form class="form-horizontal" role="form" method="post" action="${ctx}/login" id="loginForm" name="loginForm">
-                        <div class="btn-group">
-                            <input type="hidden" name="username"/>
-                            <input type="hidden" name="password"/>
-                            <button class="btn btn-warning" type="submit" id="login" style="padding:6px 13px; height:30px;">登&nbsp;录</button>
-                        </div>
-                    </form>
                 </div>
-                <!--输入框结束-->
-                <!--错误提示开始-->
-                <!--      <div class="alert alert-danger" style="margin-top:15px;width:200px;height:26px;line-height:26px;font-size:10px;padding-top:0px; ">您输入的用户名或密码有误！ </div>-->
-                <!--错误提示结束-->
+                <form class="form-horizontal" role="form" action="" id="loginForm">
+                    <div class="btn-group">
+                        <input type="hidden" name="username"/>
+                        <input type="hidden" name="password"/>
+                        <a class="btn btn-warning" type="submit" id="login" style="padding:6px 13px; height:30px;">登&nbsp;录</a>
+                    </div>
+                </form>
             </div>
+            <!--输入框结束-->
+            <!--错误提示开始-->
+            <!--      <div class="alert alert-danger" style="margin-top:15px;width:200px;height:26px;line-height:26px;font-size:10px;padding-top:0px; ">您输入的用户名或密码有误！ </div>-->
+            <!--错误提示结束-->
+        </div>
             <div class="aquila"></div>
             <div class="login_footer">&nbsp; 版本：0.1.0</div>
         </div>
