--- a/src/main/webapp/assets/css/login.css
+++ b/src/main/webapp/assets/css/login.css
@@ -68,7 +68,7 @@ ol, ul {
 .login-logo {
 	width:553px;
 	height:63px;
-	background:url(../img/login-logo.png);
+	background:url(../img/login-logo-1.png);
 }
 .login_input {
 	margin-top:90px;
