--- a/src/main/webapp/assets/css/style.css
+++ b/src/main/webapp/assets/css/style.css
@@ -12,7 +12,7 @@ width:110px;height:20px;border:0px; outline-color:#66afe9; outline-width:1px; ou
 	position:absolute;
 	width:150px;
 }
-/*ÊÕËõ*/
+/*ï¿½ï¿½ï¿½ï¿½*/
 
 .alert-default {
 	background-color: #D9EDF7;
@@ -79,8 +79,8 @@ overflow-y: auto;
   background: #ececec;
   color:#5454E0;
 }
-/*ÊÕËõ*/
-/*±í¸ñ*/
+/*ï¿½ï¿½ï¿½ï¿½*/
+/*ï¿½ï¿½ï¿½*/
 .underline{
 	text-decoration:underline;
 }
@@ -107,10 +107,10 @@ transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
 	display:none;
 }
 
-/*±í¸ñ*/
+/*ï¿½ï¿½ï¿½*/
 
 
-/*ÏÂÈýline*/
+/*ï¿½ï¿½ï¿½ï¿½line*/
 .panel {
 	position: relative;
 	clear: both;
@@ -136,8 +136,8 @@ border-top: 0;
  left: 6px;
  right: 6px;
 }
-/*ÏÂÈýlin*/
-/*µÇÂ½¿ò*/
+/*ï¿½ï¿½ï¿½ï¿½lin*/
+/*ï¿½ï¿½Â½ï¿½ï¿½*/
 .times {
 	margin:0;
 	font-size:16px;
@@ -154,7 +154,7 @@ border-top: 0;
 	font-size: 16px;
 	color: #999;
 }
-/*µÇÂ½¿ò*/
+/*ï¿½ï¿½Â½ï¿½ï¿½*/
 .table td, .table th {
 	max-width: 70px;
 	text-overflow: ellipsis;
@@ -194,7 +194,7 @@ border-top: 0;
 	font-size:18px;/*text-shadow: 1px 1px 1px 
 #494949;*/
 }
-/*ÎÄ×ÖÒªÐ¡2px*/
+/*ï¿½ï¿½ï¿½ï¿½ÒªÐ¡2px*/
 .rectangle.wen {
 	font-size:16px;
 }
@@ -205,7 +205,7 @@ border-top: 0;
 	color:#707070;
 	background:#E0E0E0;
 }
-/*±í¸ñÅÅÐò*/
+/*ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½*/
 /*dataTable*/
 table.table thead .sorting, table.table thead .sorting_asc, table.table thead .sorting_desc, table.table thead .sorting_asc_disabled, table.table thead .sorting_desc_disabled {
 	cursor: pointer;
@@ -302,7 +302,7 @@ table.table thead .sorting_desc_disabled {
 	float: right;
 	text-align: right;
 }
-/*½Ç±ê°´Å¥*/
+/*ï¿½Ç±ê°´Å¥*/
 td.group {
 	background-color: #d1cfd0;
 	border-bottom: 2px solid #A19B9E;
@@ -368,7 +368,7 @@ table.display tr.even.row_selected td {
 table.display tr.odd.row_selected td {
 	background-color: #9FAFD1;
 }
-/*±í¸ñÅÅÐò½áÊø*/
+/*ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½*/
 
 
 .java_img {
@@ -412,7 +412,7 @@ table.display tr.odd.row_selected td {
 body {
 	background:#f1f1f2;
 	background:url(../img/bg.png) repeat;
-	font-family:"Helvetica Neue", "Hiragino Sans GB", "Segoe UI", "Microsoft Yahei", "Î¢ÈíÑÅºÚ", Tahoma, Arial, STHeiti, sans-serif;
+	font-family:"Helvetica Neue", "Hiragino Sans GB", "Segoe UI", "Microsoft Yahei", "Î¢ï¿½ï¿½ï¿½Åºï¿½", Tahoma, Arial, STHeiti, sans-serif;
 	color:#333333;
 }
 .Iframe_body {
@@ -441,7 +441,7 @@ body {
 	width:600px;
 }
 h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6, p {
-	font-family: "Helvetica Neue", "Hiragino Sans GB", "Segoe UI", "Microsoft Yahei", "Î¢ÈíÑÅºÚ", Tahoma, Arial, STHeiti, sans-serif;
+	font-family: "Helvetica Neue", "Hiragino Sans GB", "Segoe UI", "Microsoft Yahei", "Î¢ï¿½ï¿½ï¿½Åºï¿½", Tahoma, Arial, STHeiti, sans-serif;
 	color:#676a74;
 }
 hr {
@@ -475,7 +475,7 @@ hr {
 	position: relative;
 	min-height: 100px;
 	min-width: 100px;
-	font-family: "Helvetica Neue", "Hiragino Sans GB", "Segoe UI", "Microsoft Yahei", "Î¢ÈíÑÅºÚ", Tahoma, Arial, STHeiti, sans-serif;
+	font-family: "Helvetica Neue", "Hiragino Sans GB", "Segoe UI", "Microsoft Yahei", "Î¢ï¿½ï¿½ï¿½Åºï¿½", Tahoma, Arial, STHeiti, sans-serif;
 }
 .content-menu {
 	background:#f5f7f6;
@@ -652,7 +652,7 @@ hr {
 .ui-widget-header a {
 	color: #222222;
 }
-/* ³õÊÔÑÕÉ«
+/* ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½É«
 ----------------------------------*/
 .ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default {
 	background:url(../img/widget.png) no-repeat;
@@ -683,14 +683,14 @@ hr {
 	color: #212121;
 	text-decoration: none;
 }
-/*Ô²½Ç*/
+/*Ô²ï¿½ï¿½*/
 .ui-corner-all, .ui-corner-top, .ui-corner-left, .ui-corner-tl {
 	border-top-left-radius: 4px;
 	border-top-right-radius: 4px;
 	border-bottom-left-radius: 4px;
 	border-bottom-right-radius: 4px;
 }
-/*ÏÂÀ­²Ëµ¥*/
+/*ï¿½ï¿½ï¿½ï¿½ï¿½Ëµï¿½*/
 
 nav .menu_one {
 	padding:9px 10px;
@@ -714,7 +714,7 @@ nav .menu_one {
 	display: block;
 	text-align: center;
 	text-decoration: none;
-	font-family: "Î¢ÈíÑÅºÚ";
+	font-family: "Î¢ï¿½ï¿½ï¿½Åºï¿½";
 	color: #fff;
 	float: left;
 }
@@ -722,14 +722,14 @@ nav .menu_one {
 	color: #69C;
 	background:#0e121e;
 }
-/*ÎªÁËËÑºü*/
+/*Îªï¿½ï¿½ï¿½Ñºï¿½*/
 a:visited, a:active {
 	outline:0;
 }
 .Navigation ul li a, .Navigation ul li a:hover, .Navigation ul li a:visited, .Navigation ul li a:active, .Navigation ul li:hover a, .Navigation ul li:hover a:hover, .Navigation ul li:hover a:visited, .Navigation ul li:hover a:active {
 	outline:0;
 }
-/*ÎªÁËËÑºü*/
+/*Îªï¿½ï¿½ï¿½Ñºï¿½*/
 .Navigation ul li ul {
 	display: none;
 }
@@ -778,7 +778,7 @@ a:visited, a:active {
 .Navigation .active {
 	background-color:#171c30;
 }
-/*²½×à*/
+/*ï¿½ï¿½ï¿½ï¿½*/
 ul, li {
 	list-style:none;
 	padding:0;
@@ -864,7 +864,7 @@ z-index: 1;
 .btn-inline {
 	padding:3px 7px;
 }
-/*Ê÷*/
+/*ï¿½ï¿½*/
 .treeview, .treeview ul {
 	padding: 0;
 	margin: 0;
@@ -938,7 +938,7 @@ z-index: 1;
 .treeview li.collapsable, .treeview li.expandable {
 	background-position: 0 -176px;
 }
-/*Ê÷*/
+/*ï¿½ï¿½*/
 
 @media all and (min-width:1280px) {
 .Iframe_body {
@@ -955,15 +955,15 @@ nav .menu_one {
  padding:9px 12px;
 }
 .Navigation ul li:hover ul li a {
- width:133px;
+ width:167px;
 }
 .Navigation ul li:hover ul {
- width:133px;
+ width:167px;
 }
 }
 @media all and (max-width:900px) {
 }
-/*ÍÏ¶¯ÊýÖµcss*/
+/*ï¿½Ï¶ï¿½ï¿½ï¿½Öµcss*/
 .padding0 {
     padding: 0px;
 }
@@ -1011,3 +1011,95 @@ nav .menu_one {
     cursor: ew-resize;
     margin-left: -3px;
 }
+
+
+
+
+
+/*<!--gritter å¼¹å‡ºæç¤º-->*/
+  #gritter-notice-wrapper {
+	position:fixed;
+	top:20px;
+	right:20px;
+	width:301px;
+	z-index:9999;
+	font-family: 'Roboto', sans-serif;
+}
+.gritter-item-wrapper {
+	position:relative;
+	margin:0 0 10px 0;
+	background: #000;
+	background: rgba(0, 0, 0, 0.5);
+	-moz-border-radius: 3px;
+	-webkit-border-radius: 3px;
+	border-radius: 3px;
+}
+.growl-primary {
+	background:#7c8a9a;
+}
+.growl-success {
+	background:#45b854;
+}
+.growl-warning {
+	background:#ff7800;
+}
+.growl-danger {
+	background:#f05352;
+}
+.growl-info {
+	background:#0474c8;
+}
+.gritter-item {
+	display:block;
+	color:#eee;
+	padding: 15px;
+	font-size: 11px;
+}
+.gritter-item p {
+	padding:0;
+	margin:0;
+	word-wrap:break-word;
+	line-height: 18px;
+	font-size: 13px;
+	opacity: 0.75;
+	color:#fff;
+}
+.gritter-close {
+	display:none;
+	position:absolute;
+	top: 10px;
+	right: 10px;
+	background: url(../images/close-white.png) no-repeat center center;
+	cursor:pointer;
+	width:10px;
+	height:11px;
+	text-indent:-9999em;
+	opacity: 0.5;
+}
+.gritter-title {
+	font-size: 14px;
+	padding:0 0 7px 0;
+	display:block;
+	font-family: 'Roboto', sans-serif;
+	font-weight:700;
+}
+.gritter-image {
+	width:48px;
+	height:48px;
+	float:left;
+}
+.gritter-with-image, .gritter-without-image {
+	padding:0;
+}
+.gritter-with-image {
+	width:220px;
+	float:right;
+	padding-left: 10px;
+}
+/* for the light (white) version of the gritter notice */
+.gritter-light .gritter-item {
+	background: #fff;
+	background: rgba(255, 255, 255, 0.75);
+	color: #666;
+}
+/*<!--gritter å¼¹å‡ºæç¤º-->*/
