--- a/src/main/webapp/WEB-INF/views/trainplan/audit.html
+++ b/src/main/webapp/WEB-INF/views/trainplan/audit.html
@@ -1,6 +1,3 @@
-<%@ page contentType="text/html;charset=UTF-8"%>
-<%@ taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core" %>
-<c:set var="ctx" value="${pageContext.request.contextPath}"/>
 <!DOCTYPE html>
 <html>
 <head lang="en">
@@ -11,25 +8,25 @@
     <meta http-equiv="Pragma" content="no-cache"/>
     <meta http-equiv="Expires" content="0"/>
     <title>审核次日客车运行线</title>
-    <link type="text/css" href="${ctx}/assets/css/custom-bootstrap.css" rel="stylesheet"/>
-    <link type="text/css" href="${ctx}/assets/css/font-awesome.min.css" rel="stylesheet"/>
-    <link type="text/css" href="${ctx}/assets/css/minified/jquery-ui.min.css" rel="stylesheet"/>
-    <link type="text/css" href="${ctx}/assets/css/style.css" rel="stylesheet"/>
-    <script type="text/javascript" src="${ctx}/assets/js/jquery.js"></script>
-    <script type="text/javascript" src="${ctx}/assets/js/html5.js"></script>
-    <script type="text/javascript" src="${ctx}/assets/js/fuelUX.js"></script>
-    <script type="text/javascript" src="${ctx}/assets/js/jquery.dataTables.js"></script>
-    <script type="text/javascript" src="${ctx}/assets/js/jquery.knob.js"></script>
-    <script type="text/javascript" src="${ctx}/assets/js/jquery.gritter.min.js"></script>
-    <script type="text/javascript" src="${ctx}/assets/js/jquery.sparkline.min.js"></script>
-    <script type="text/javascript" src="${ctx}/assets/js/jquery.freezeheader.js"></script>
-    <script type="text/javascript" src="${ctx}/assets/js/minified/jquery-ui.min.js"></script>
-    <script type="text/javascript" src="${ctx}/assets/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="${ctx}/assets/js/datepicker.js"></script>
-    <script type="text/javascript" src="${ctx}/assets/js/purl.js"></script>
-    <script type="text/javascript" src="${ctx}/assets/js/knockout.js"></script>
-    <script type="text/javascript" src="${ctx}/assets/js/moment.min.js"></script>
-    <script type="text/javascript" src="${ctx}/assets/js/trainplan/audit.js"></script>
+    <link type="text/css" href="../../../assets/css/custom-bootstrap.css" rel="stylesheet"/>
+    <link type="text/css" href="../../../assets/css/font-awesome.min.css" rel="stylesheet"/>
+    <link type="text/css" href="../../..//assets/css/minified/jquery-ui.min.css" rel="stylesheet"/>
+    <link type="text/css" href="../../..//assets/css/style.css" rel="stylesheet"/>
+    <script type="text/javascript" src="../../../assets/js/jquery.js"></script>
+    <script type="text/javascript" src="../../../assets/js/html5.js"></script>
+    <script type="text/javascript" src="../../../assets/js/fuelUX.js"></script>
+    <script type="text/javascript" src="../../../assets/js/jquery.dataTables.js"></script>
+    <script type="text/javascript" src="../../../assets/js/jquery.knob.js"></script>
+    <script type="text/javascript" src="../../../assets/js/jquery.gritter.min.js"></script>
+    <script type="text/javascript" src="../../../assets/js/jquery.sparkline.min.js"></script>
+    <script type="text/javascript" src="../../../assets/js/jquery.freezeheader.js"></script>
+    <script type="text/javascript" src="../../../assets/js/minified/jquery-ui.min.js"></script>
+    <script type="text/javascript" src="../../../assets/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="../../../assets/js/datepicker.js"></script>
+    <script type="text/javascript" src="../../../assets/js/purl.js"></script>
+    <script type="text/javascript" src="../../../assets/js/knockout.js"></script>
+    <script type="text/javascript" src="../../../assets/js/moment.min.js"></script>
+    <script type="text/javascript" src="../../../assets/js/trainplan/planline_check.js"></script>
     <style>
         #hdleft_table table tr th{
             border-color:#dfe4ee;
@@ -91,6 +88,7 @@
                                         <th rowspan="2" class="text-center">序号</th>
                                         <th rowspan="2" class="text-center">车次</th>
                                         <th rowspan="2" class="text-center">来源</th>
+                                        <th rowspan="2" class="text-center">是否高线</th>
                                         <th rowspan="2" class="text-center">始发站</th>
                                         <th rowspan="2" class="text-center">始发时间</th>
                                         <th rowspan="2" class="text-center">终到站</th>
@@ -109,6 +107,7 @@
                                         <td class="text-center"><input class="checkbox-inline" name="plan" type="checkbox"/></td>
                                         <td class="text-center"></td>
                                         <td class="text-center"><a href="#"></a></td>
+                                        <td class="text-center"></td>
                                         <td class="text-center"></td>
                                         <td class="text-center"></td>
                                         <td class="text-center"></td>
