--- a/src/main/webapp/assets/css/style.css
+++ b/src/main/webapp/assets/css/style.css
@@ -983,8 +983,8 @@ nav .menu_one {
     margin: 0px;
 }
 .dialog {
-    padding: 0px;
-    margin: 0px;
+    padding: 0px 0px 0px 0px;
+    margin: 0px 0px 0px 0px;
     border: 0px;
     width: 100%;
     height: 100%;
