--- a/src/main/webapp/assets/css/style.css
+++ b/src/main/webapp/assets/css/style.css
@@ -127,8 +127,8 @@ right: 3px;
 -webkit-border-radius: 0 0 3px 3px;
 -moz-border-radius: 0 0 3px 3px;
 border-radius: 0 0 3px 3px;
-border: /*1px solid 
-#E2E2E2;1px solid lightGrey;*/
+    /*border: 1px solid
+    #E2E2E2;1px solid lightGrey;*/
 border-top: 0;
 }
 .panel-default::before {
