adjust login page

--- a/src/main/webapp/assets/css/style.css
+++ b/src/main/webapp/assets/css/style.css
@@ -976,6 +976,9 @@ nav .menu_one {
 .paddingtop10 {
     padding-top: 10px;
 }
+.paddingtop30 {
+    padding-top: 30px;
+}
 .paddingtop0 {
     padding-top: 0px;
 }
