--- a/src/main/webapp/assets/css/style.css
+++ b/src/main/webapp/assets/css/style.css
@@ -973,6 +973,9 @@ nav .menu_one {
 .paddingtop5 {
     padding-top: 5px;
 }
+.paddingright0 {
+    padding-right: 0px;
+}
 .paddingtop10 {
     padding-top: 10px;
 }
