--- a/src/main/webapp/assets/css/style.css
+++ b/src/main/webapp/assets/css/style.css
@@ -1320,3 +1320,7 @@ z-index: 1;
 	display: block;
 }
 /*多级菜单     end*/
+
+.ui-dialog .ui-widget .ui-widget-content .ui-corner-all .ui-front .ui-draggable .ui-resizable {
+    z-index: 999;
+}
