--- a/src/main/webapp/assets/css/style.css
+++ b/src/main/webapp/assets/css/style.css
@@ -1102,7 +1102,7 @@ z-index: 1;
 @media all and (min-width:1280px) {
 	.Iframe_body {
         background: #ffffff;
-		padding: 12px 5%;
+		padding: 12px 5px 5px 5px;
 	}
 	.sidebar {
 		top: 0;
@@ -1325,7 +1325,4 @@ z-index: 1;
 
 .ui-dialog .ui-widget .ui-widget-content .ui-corner-all .ui-front .ui-draggable .ui-resizable {
     z-index: 999;
-}
-.Iframe-body {
-    background: #ffffff;
 }
